# messydata

./: .gitignore  CLAUDE.md  README.md  SKILL.md  generator.py  injector.py  pyproject.toml  use_case_config.yaml
examples/: financial_ledger_config.yaml  retail_config.yaml
messydata/: __init__.py  cli.py  distributions.py  generator.py  injector.py  pipeline.py  schema.py
quasidata/: generator.py  injector.py  pipeline.py  schema.py
tests/: test_temporal.py
