[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messydata"
version = "0.1.0"
description = "Synthetic dirty data generator"
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "numpy",
    "pandas",
    "faker",
    "pydantic>=2.12.5",
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
messydata = "messydata.cli:main"
