[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messydata"
version = "0.1.1"
description = "Synthetic dirty data generator"
readme = "README.md"
license = { text = "Apache Software License (Apache-2.0)" }
authors = [{ name = "Santiago Viquez", email = "santiago@soda.io" }]
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "numpy",
    "pandas",
    "faker",
    "pydantic>=2.12.5",
    "click>=8.1.8",
]

[project.urls]
Homepage = "https://github.com/sodadata/messydata"
Repository = "https://github.com/sodadata/messydata"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
messydata = "messydata.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [".venv", "list", "dist", "tests", "examples"]
